<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ntak</groupId>
    <artifactId>pearl-zip</artifactId>
    <version>0.0.0.1</version>
    <name>PearlZip Application</name>
    <packaging>pom</packaging>

    <properties>
        <log4j.version>2.14.0</log4j.version>
        <junit.version>5.5.2</junit.version>
        <dryrun.release>true</dryrun.release>
    </properties>

    <modules>
        <module>pearl-zip-license</module>
        <module>pearl-zip-archive</module>
        <module>pearl-zip-lang-pack-en-GB</module>
        <module>pearl-zip-ui</module>
        <module>pearl-zip-archive-acc</module>
        <module>pearl-zip-archive-szjb</module>
    </modules>

    <repositories>
        <repository>
            <id>Maven Central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Unit Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- Miscellaneous -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>en-GB</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <lang>en</lang>
                <country>GB</country>
            </properties>
        </profile>
        <profile>
            <id>fr-FR</id>
            <properties>
                <lang>fr</lang>
                <country>FR</country>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>parse-version</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>parse-version</goal>
                        </goals>
                        <configuration>
                            <!--suppress UnresolvedMavenProperty -->
                            <versionString>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${parsedVersion.buildNumber}</versionString>
                        </configuration>
                    </execution>
                    <execution>
                        <id>invert-properties</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>bsh-property</goal>
                        </goals>
                        <configuration>
                            <source>push.changes = !${dryrun.release};</source>
                            <properties>
                                <property>push.changes</property>
                            </properties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>15</source>
                    <target>15</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.0.0</version>
                <executions>
                    <execution>
                        <id>aggregate-download-licenses</id>
                        <goals>
                            <goal>aggregate-download-licenses</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <errorRemedy>warn</errorRemedy>
                    <cleanLicensesOutputDirectory>false</cleanLicensesOutputDirectory>
                    <outputEncoding>UTF-8</outputEncoding>
                    <licensesOutputDirectory>${project.basedir}/pearl-zip-license/src/main/resources/ref</licensesOutputDirectory>
                    <licensesOutputFile>${project.basedir}/pearl-zip-license/src/main/resources/LICENSE.xml</licensesOutputFile>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
